<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.pdmd_practica2_jaime.MainActivity"
    android:padding="0dp"
    android:background="#3d3c3c">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/horizontalScrollView"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#121212"
            android:gravity="center_vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_invertirH"
                android:id="@+id/button"
                android:onClick="invertirh" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_invertirV"
                android:id="@+id/button2"
                android:onClick="intertirv" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_escala_gris"
                android:id="@+id/button3"
                android:onClick="escalagris" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_filtroR"
                android:id="@+id/button4"
                android:onClick="filtrorojo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_filtroA"
                android:id="@+id/button5"
                android:onClick="filtroazul" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_filtroV"
                android:id="@+id/button6"
                android:onClick="filtroverde" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rotarIzq"
                android:id="@+id/button7"
                android:onClick="rotarizq" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_rotarDch"
                android:id="@+id/button8"
                android:onClick="rotardch" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_select"
        android:id="@+id/button9"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="seleccionar" />
</RelativeLayout>
